--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 body {
     background: rgb(200,200,200);
 }
+.content {
+    display: flex;
+    flex: 1;
+}
+.main {
+    width: 80%;
+}
+.sidebar {
+    background-color: aqua;
+    min-width: 20%;
+    padding: 1rem;
+}
